# depshub

./: .gitignore  README.md  depshub.yaml  depshub.yml  go.mod  go.sum
.github/workflows/: depshub.yml  docs.yml  release.yml  test.yml
cmd/depshub/: lint.go  root.go  version.go
docs/: README.md  astro.config.mjs  package.json
docs/src/components/: ThemeSelect.astro
docs/src/content/docs/: index.mdx  installation.md  installation.mdx  what-is-depshub.md  why.md
docs/src/content/docs/guides/: custom.md  examples.md  integrations.md  linter.md  updater.md
docs/src/content/docs/misc/: contributions.md  supported.md  technical-details.md
docs/src/content/docs/reference/: cli-options.md  configuration-file.md  example.md  rules.md
docs/src/styles/: custom.css
internal/config/: config.go  config_test.go
internal/linter/: config.go  config_test.go  linter.go
internal/linter/rules/: 001_order.go  allowed_licenses.go  allowed_licenses_test.go  lockfile.go  lockfile_test.go  max_libyear.go  max_libyear_test.go  max_major_updates.go  max_major_updates_test.go  max_minor_updates.go  max_minor_updates_test.go  max_package_age.go  max_package_age_test.go  max_patch_updates.go  max_patch_updates_test.go  min_weekly_downloads.go  min_weekly_downloads_test.go  no_any_tag.go  no_any_tag_test.go  no_deprecated.go  no_deprecated_test.go  no_duplicates.go  no_duplicates_test.go  no_multiple_versions.go  no_multiple_versions_test.go  no_pre_release.go  no_pre_release_test.go  no_unstable.go  no_unstable_test.go  rules.go  sorted.go  sorted_test.go  version.go
pkg/manager/: fetch.go  manager.go  scan.go
pkg/manager/cargo/: cargo.go  cargo_test.go
pkg/manager/cargo/testdata/: Cargo.toml
pkg/manager/gem/: gem.go  gem_test.go
pkg/manager/gem/testdata/: Gemfile
pkg/manager/go/: go.go  go_test.go
pkg/manager/go/testdata/: go.mod
pkg/manager/hex/: hex.go  hex_test.go
pkg/manager/hex/testdata/: mix.exs
pkg/manager/maven/: maven.go  maven_test.go
pkg/manager/maven/testdata/: pom.xml
pkg/manager/npm/: npm.go  npm_test.go  orderedmap.go
pkg/manager/npm/testdata/: package.json
pkg/manager/pip/: pip.go  pip_test.go
pkg/manager/pip/testdata/: requirements.txt
pkg/manager/pyproject/: pyproject.go  pyproject_test.go
pkg/manager/pyproject/testdata/: pyproject.toml
pkg/sources/: cache.go  cache_test.go  fetch.go  source.go
pkg/sources/crates/: crates.go
pkg/sources/gems/: gems.go
pkg/sources/go/: go.go
pkg/sources/hex/: hex.go
pkg/sources/maven/: maven.go
pkg/sources/npm/: npm.go
pkg/sources/pypi/: pypi.go
pkg/types/: config.go  types.go
scripts/: install.sh
